--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="hide">
+    <header class="header">
         <div class="navbar">
             <h3 class="nav-title">Ma<span>r</span>y</h3>
             <nav>
@@ -40,7 +40,7 @@
     </header>
 
     <section class="about-section">
-        <!-- .about>h3.about-title+p.about-desc+.about-item-cont>.about-item*4>h3+p -->
+       
         <div class="about">
             <h3 class="about-title">About Me</h3>
             <p class="about-desc">I, m a designer & developer with a passion for web design. I enjoy developing simple,
